5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1573_1330.log
== TEST (2019-03-11 15:17:51) 
-- CODE:
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:17:57) 
-- CODE:
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:58) 
-- CODE:
print(42)
-- EXECUTION TIME:
0.181917
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:14) 
-- CODE:
print(x,n 42)
-- ERROR:
File "XXXX", line 1
    print(x,n 42)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:15) 
-- CODE:
print(x,n 42)
-- EXECUTION TIME:
0.191392
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print(x,n 42)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:44) 
-- CODE:
round(41,6, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41,6, 2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:46) 
-- CODE:
round(41,6, 2)
-- EXECUTION TIME:
0.173692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 1, in <module>
    round(41,6, 2)
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:47) 
-- CODE:
round(41,6, 2)
-- EXECUTION TIME:
0.159329
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 1, in <module>
    round(41,6, 2)
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:53) 
-- CODE:
round(41.6, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41,6, 2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:54) 
-- CODE:
round(41.6, 2)
-- EXECUTION TIME:
0.217671
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:55) 
-- CODE:
round(41.6, 2)
-- EXECUTION TIME:
0.153132
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:04) 
-- CODE:
round(41.6,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41,6, 2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:05) 
-- CODE:
round(41.6,2)
-- EXECUTION TIME:
0.137367
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:06) 
-- CODE:
round(41.6,2)
-- EXECUTION TIME:
0.15921
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:11) 
-- CODE:
round(41.6, 2)
-- EXECUTION TIME:
0.169595
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:15) 
-- CODE:
round(41.6666, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41,6, 2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:16) 
-- CODE:
round(41.6666, 2)
-- EXECUTION TIME:
0.251749
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:29) 
-- CODE:
round(41.67, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41,6, 2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:30) 
-- CODE:
round(41.67, 2)
-- EXECUTION TIME:
0.126966
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:13) 
-- CODE:
print (round(41.67, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:13) 
-- CODE:
print (round(41.67, 2))
-- EXECUTION TIME:
0.12853
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
